# kenken-designer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  clippy.toml  index.html  package.json  playwright.config.ts  styles.css  tailwind.css  tsconfig.json
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: app.rs  cage_band.rs  cage_colors.rs  cage_edit.rs  cage_index.rs  clear_all_cages_modal.rs  context_menu.rs  context_menu_view.rs  diff.rs  flash.rs  grid.rs  main.rs  navigation.rs  operator_entry.rs  theme.rs  toast.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cage_edit.rs  diff.rs  edit.rs  lib.rs  main.rs  persist.rs  session.rs  test_util.rs  view.rs
tests/: active_cage_overlay.test.ts  arrow_nav_after_band.test.ts  arrow_nav_bottom.test.ts  cage_band_animation.test.ts  cage_band_height.test.ts  cage_band_thumb.test.ts  clear_all_cages_modal.test.ts  context_menu.test.ts  cursor_navigation.test.ts  draft_creation.test.ts  helpers.ts  move_mode.test.ts  operator_entry.test.ts  shift_enter_select_blur.test.ts  shift_enter_singleton.test.ts  size_selector.test.ts  tab_cycles_cages.test.ts  tuple_count.test.ts  undo_redo.test.ts
